--- a/coptic/lambdin/styles/styles.css
+++ b/coptic/lambdin/styles/styles.css
@@ -123,7 +123,7 @@ p {
 #lesson_01,
 #lesson_02,
 #lesson_03,
-#lesson_04,*/
+#lesson_04,
 #lesson_05,
 #lesson_06,
 #lesson_07,
@@ -149,7 +149,7 @@ p {
 #lesson_27,
 #lesson_28,
 #lesson_29,
-#lesson_30 {
+#lesson_30*/ {
 	display: none;
 }
 
