--- a/coptic/mattar/styles/styles.css
+++ b/coptic/mattar/styles/styles.css
@@ -23,7 +23,7 @@ b {
 @font-face {
 	font-family: rk_coptic;
 	src: url("./NotoSansCoptic-Regular.ttf");
-	unicode-range: U+03E2-03EF, U+2C80-2CFF, U+0304, U+0305;
+	unicode-range: U+03E2-03EF, U+2C80-2CFF, U+0300, U+0304, U+0305;
 }
 
 @font-face {
