--- a/coptic/mallon/styles/styles.css
+++ b/coptic/mallon/styles/styles.css
@@ -13,7 +13,7 @@ body {
 	font-family: rk_coptic;
 	src: url("./NotoSansCoptic.ttf");
 	/*src: local("Noto Sans Coptic");*/
-	unicode-range: U+03E2-03EF, U+2C80-2CFF, U+0300, U+0304, U+0305;
+	unicode-range: U+03E2-03EF, U+2C80-2CFF, U+0300, U+0301, U+0304, U+0305;
 }
 
 @font-face {
