--- a/coptic/mallon/styles/styles.css
+++ b/coptic/mallon/styles/styles.css
@@ -13,28 +13,7 @@ body {
 	font-family: rk_coptic;
 	src: url("./NotoSansCoptic.ttf");
 	/*src: local("Noto Sans Coptic");*/
-	unicode-range:
-		U+03E2-03EF, /* greek and coptic */ 
-		U+2C80-2CFF, /* coptic */
-		U+0304, /* normal stroke */
-		U+0305, /* number, abbr., etc. */
-		U+033F, /* double stroke */
-		U+FE24, /* left half stroke */
-		U+FE26, /* long stroke */
-		U+FE25, /* right half stroke */
-
-		U+035E, /* double combine stroke */
-		U+0323, /* combine dot under */
-		U+0307, /* combine dot over */
-		U+0301, /* combine acute */
-		U+0300, /* combine grave */
-		U+0302, /* combine circumflex pointed */
-		U+0311, /* combine circumflex curved */
-		U+0361, /* wide inverted breve */
-		U+0308, /* combine diaeresis */
-
-		U+00B7, /* middle dot */
-		U+2E17; /* slanted double hyphen */;
+	unicode-range: U+03E2-03EF, U+2C80-2CFF, U+0300, U+0304, U+0305;
 }
 
 @font-face {
@@ -49,6 +28,27 @@ body {
 	src: url("./NotoSansArabic.ttf");
 	/*src: local("Noto Sans Arabic");*/
 	unicode-range: U+0600–06FF;
+}
+
+div.abc {
+  background: steelblue;
+  max-width: 300px;
+  max-height: 700px;
+  margin: 0 auto;
+}
+
+div.abc img {
+  mix-blend-mode: hard-light;
+}
+
+.abc {
+  //width: 100px;
+  //height: auto;
+  //margin: auto;
+  //text-align: center;
+  //object-position: 10px 0px;
+  //outline: 1px dashed lightgreen;
+  
 }
 
 sup {
@@ -90,20 +90,8 @@ p.footnote {
 	padding: 0 1em;
 }
 
-ol, ul {
-	text-align: left;
-}
-
 ul {
 	list-style: none;
-}
-
-li a {
-	color: gold;
-}
-
-li a:visited {
-	color: goldenrod;
 }
 
 h1 {
