--- a/coptic/mallon/styles/styles.css
+++ b/coptic/mallon/styles/styles.css
@@ -12,7 +12,7 @@ body {
 @font-face {
 	font-family: rk_coptic;
 	src: url("./NotoSansCoptic.ttf");
-	src: local("Noto Sans Coptic Regular");
+	/*src: local("Noto Sans Coptic Regular");*/
 	unicode-range:
 		U+03E2-03EF, /* greek and coptic */ 
 		U+2C80-2CFF, /* coptic */
@@ -47,7 +47,7 @@ body {
 @font-face {
 	font-family: rk_arabic;
 	src: url("./NotoSansArabic.ttf");
-	src: local("Noto Sans Arabic");
+	/*src: local("Noto Sans Arabic");*/
 	unicode-range: U+0600–06FF;
 }
 
