--- a/coptic/mallon/styles/styles.css
+++ b/coptic/mallon/styles/styles.css
@@ -9,20 +9,26 @@ body {
 	padding: 0;
 }
 
+#title { outline: 1px solid gold; }
+#preface { outline: 1px solid red; }
+#toc { outline: 1px solid white;}
+#abreviations_conventionnelles { outline: 1px solid lightgreen; }
+#grammaire { outline: 1px solid purple;}
+
 .section {
-  border: 1px dotted lightgreen;
+	border: 1px dotted lightgreen;
 }
 
 .section:before {
-  content: attr(data-section-no);
-  color: orange;
-  font-size: 2em;
+	content: attr(data-section-no);
+	color: orange;
+	font-size: 2em;
 }
 
 @font-face {
 	font-family: rk_coptic;
 	src: url("./NotoSansCoptic.ttf");
-	/*src: local("Noto Sans Coptic Regular");*/
+/* 	src: local("Noto Sans Coptic Regular"); */
 	unicode-range:
 		U+03E2-03EF, /* greek and coptic */ 
 		U+2C80-2CFF, /* coptic */
@@ -50,82 +56,38 @@ body {
 @font-face {
 	font-family: rk_greek;
 	src: url("./NotoSans.ttf");
-	/*src: local("Noto Sans");*/
+/* 	src: local("Noto Sans"); */
 	unicode-range: U+0370-03FF, U+1F00-1FFF;
 }
 
 @font-face {
 	font-family: rk_arabic;
 	src: url("./NotoSansArabic.ttf");
-	/*src: local("Noto Sans Arabic");*/
+/* 	src: local("Noto Sans Arabic"); */
 	unicode-range: U+0600–06FF;
 }
 
-.left-half {
-  //display: flex;
-  //flex-direction: column;
-  //flex-wrap: wrap;
-  //justify-content: space-evenly;
-  //align-items: stretch;
-  //gap: .5em;
-  //height: calc(100vh - 2em);
-  //outline: 1px dashed lightgreen;
-  //overflow: scroll;
-}
-
-.left-half > * {
-  //outline: 1px dotted orangered;
-  //width: 50%;
-  //height: 100%;
-}
-
-#title {
-  
-}
-
-#preface {
-  //display: flex;
-  //flex-direction: column;
-  //flex-wrap: wrap;
-  //height: calc(100vh - 2em);
-}
-
-#preface > * {
-  //outline: 1px dashed gold;
-  //width: 50%;
-}
-
-#title,
-#toc,
-#abbr,
-#preface,
-#intro,
-#phonology,
-#chapter_01,
-#chapter_02 {
-  //display: none;
-}
-
 div.abc {
-  background: steelblue;
-  max-width: 300px;
-  max-height: 700px;
-  margin: 0 auto;
+	background: steelblue;
+	max-width: 300px;
+	max-height: 700px;
+	margin: 0 auto;
 }
 
 div.abc img {
-  mix-blend-mode: hard-light;
+	mix-blend-mode: hard-light;
 }
 
 sup.footnote {
-	color: grey;
+	color: white;
+	unicode-bidi: plaintext;
 }
 
 hr {
 	border: 0;
 	height: 1px;
 	background: linear-gradient(to right, transparent, currentColor, transparent);
-  //display: none;
+/* 	display: none; */
 }
 
 .center {
@@ -154,27 +116,27 @@ p.footnote {
 }
 
 ::marker {
-  color: violet;
+	color: violet;
 }
 
 ol.decimal {
-  list-style: decimal;
+	list-style: decimal;
 }
 
 ol.lower-latin {
-  list-style: lower-latin;
+	list-style: lower-latin;
 }
 
 ol.upper-latin {
-  list-style: upper-latin;
+	list-style: upper-latin;
 }
 
 ol.lower-roman {
-  list-style: lower-roman;
+	list-style: lower-roman;
 }
 
 ol.upper-roman {
-  list-style: upper-roman;
+	list-style: upper-roman;
 }
 
 ul {
@@ -182,11 +144,11 @@ ul {
 }
 
 li a {
-  color: gold;
+	color: gold;
 }
 
 li a:visited {
-  color: goldenrod;
+	color: goldenrod;
 }
 
 h1 {
@@ -199,15 +161,15 @@ h1 span {
 	text-transform: none;
 }
 
-h2 { /* lesson */
+h2 {
 	font-weight: normal;
 	text-align: center;
 	text-transform: uppercase;
 }
 
-h3 { /* vocabulary, exercises */
+h3 {
 	color: white;
-	//border: 1px dotted lightgreen;
+/* 	border: 1px dotted lightgreen; */
 	background: #ffffff22;
 	font-weight: normal;
 	margin-top: 0rem;
@@ -222,4 +184,428 @@ em {
 	color: gold;
 	font-family: rk_coptic, rk_greek, rk_arabic;
 	font-style: normal;
+}
+
+.ar {
+	color: violet;
+	direction: rtl;
+}
+
+.gr {
+	color: lightgreen;
+}
+
+/* #title, */
+#preface,
+/* #toc, */
+/* #abreviations_conventionnelles, */
+/* #intro, */
+/* #phonology, */
+/* #tableau-des-verbes, */
+/* #saidique, */
+/* #petit_exercise, */
+/* #bibliographie, */
+/* #chrestomathie, */
+/* #liste_de_textes, */
+/* #additions_et_corrections, */
+/* #section-001, */
+/* #section-002, */
+/* #section-003, */
+/* #section-004, */
+/* #section-005, */
+/* #section-006, */
+/* #section-007, */
+/* #section-008, */
+/* #section-009, */
+/* #section-010, */
+/* #section-011, */
+/* #section-012, */
+/* #section-013, */
+/* #section-014, */
+/* #section-015, */
+/* #section-016, */
+/* #section-017, */
+/* #section-018, */
+/* #section-019, */
+/* #section-020, */
+/* #section-021, */
+/* #section-022, */
+/* #section-023, */
+/* #section-024, */
+/* #section-025, */
+/* #section-026, */
+/* #section-027, */
+/* #section-028, */
+/* #section-029, */
+/* #section-030, */
+/* #section-031, */
+/* #section-032, */
+/* #section-033, */
+/* #section-034, */
+/* #section-035, */
+/* #section-036, */
+/* #section-037, */
+/* #section-038, */
+/* #section-039, */
+/* #section-040, */
+/* #section-041, */
+/* #section-042, */
+/* #section-043, */
+/* #section-044, */
+/* #section-045, */
+/* #section-046, */
+/* #section-047, */
+/* #section-048, */
+/* #section-049, */
+/* #section-050, */
+/* #section-051, */
+/* #section-052, */
+/* #section-053, */
+/* #section-054, */
+/* #section-055, */
+/* #section-056, */
+/* #section-057, */
+/* #section-058, */
+/* #section-059, */
+/* #section-060, */
+/* #section-061, */
+/* #section-062, */
+/* #section-063, */
+/* #section-064, */
+/* #section-065, */
+/* #section-066, */
+/* #section-067, */
+/* #section-068, */
+/* #section-069, */
+/* #section-070, */
+/* #section-071, */
+/* #section-072, */
+/* #section-073, */
+/* #section-074, */
+/* #section-075, */
+/* #section-076, */
+/* #section-077, */
+/* #section-078, */
+/* #section-079, */
+/* #section-080, */
+/* #section-081, */
+/* #section-082, */
+/* #section-083, */
+/* #section-084, */
+/* #section-085, */
+/* #section-086, */
+/* #section-087, */
+/* #section-088, */
+/* #section-089, */
+/* #section-090, */
+/* #section-091, */
+/* #section-092, */
+/* #section-093, */
+/* #section-094, */
+/* #section-095, */
+/* #section-096, */
+/* #section-097, */
+/* #section-098, */
+/* #section-099, */
+/* #section-100, */
+/* #section-101, */
+/* #section-102, */
+/* #section-103, */
+/* #section-104, */
+/* #section-105, */
+/* #section-106, */
+/* #section-107, */
+/* #section-108, */
+/* #section-109, */
+/* #section-110, */
+/* #section-111, */
+/* #section-112, */
+/* #section-113, */
+/* #section-114, */
+/* #section-115, */
+/* #section-116, */
+/* #section-117, */
+/* #section-118, */
+/* #section-119, */
+/* #section-120, */
+/* #section-121, */
+/* #section-122, */
+/* #section-123, */
+/* #section-124, */
+/* #section-125, */
+/* #section-126, */
+/* #section-127, */
+/* #section-128, */
+/* #section-129, */
+/* #section-130, */
+/* #section-131, */
+/* #section-132, */
+/* #section-133, */
+/* #section-134, */
+/* #section-135, */
+/* #section-136, */
+/* #section-137, */
+/* #section-138, */
+/* #section-139, */
+/* #section-140, */
+/* #section-141, */
+/* #section-142, */
+/* #section-143, */
+/* #section-144, */
+/* #section-145, */
+/* #section-146, */
+/* #section-147, */
+/* #section-148, */
+/* #section-149, */
+/* #section-150, */
+/* #section-151, */
+/* #section-152, */
+/* #section-153, */
+/* #section-154, */
+/* #section-155, */
+/* #section-156, */
+/* #section-157, */
+/* #section-158, */
+/* #section-159, */
+/* #section-160, */
+/* #section-161, */
+/* #section-162, */
+/* #section-163, */
+/* #section-164, */
+/* #section-165, */
+/* #section-166, */
+/* #section-167, */
+/* #section-168, */
+/* #section-169, */
+/* #section-170, */
+/* #section-171, */
+/* #section-172, */
+/* #section-173, */
+/* #section-174, */
+/* #section-175, */
+/* #section-176, */
+/* #section-177, */
+/* #section-178, */
+/* #section-179, */
+/* #section-180, */
+/* #section-181, */
+/* #section-182, */
+/* #section-183, */
+/* #section-184, */
+/* #section-185, */
+/* #section-186, */
+/* #section-187, */
+/* #section-188, */
+/* #section-189, */
+/* #section-190, */
+/* #section-191, */
+/* #section-192, */
+/* #section-193, */
+/* #section-194, */
+/* #section-195, */
+/* #section-196, */
+/* #section-197, */
+/* #section-198, */
+/* #section-199, */
+/* #section-200, */
+/* #section-201, */
+/* #section-202, */
+/* #section-203, */
+/* #section-204, */
+/* #section-205, */
+/* #section-206, */
+/* #section-207, */
+/* #section-208, */
+/* #section-209, */
+/* #section-210, */
+/* #section-211, */
+/* #section-212, */
+/* #section-213, */
+/* #section-214, */
+/* #section-215, */
+/* #section-216, */
+/* #section-217, */
+/* #section-218, */
+/* #section-219, */
+/* #section-220, */
+/* #section-221, */
+/* #section-222, */
+/* #section-223, */
+/* #section-224, */
+/* #section-225, */
+/* #section-226, */
+/* #section-227, */
+/* #section-228, */
+/* #section-229, */
+/* #section-230, */
+/* #section-231, */
+/* #section-232, */
+/* #section-233, */
+/* #section-234, */
+/* #section-235, */
+/* #section-236, */
+/* #section-237, */
+/* #section-238, */
+/* #section-239, */
+/* #section-240, */
+/* #section-241, */
+/* #section-242, */
+/* #section-243, */
+/* #section-244, */
+/* #section-245, */
+/* #section-246, */
+/* #section-247, */
+/* #section-248, */
+/* #section-249, */
+/* #section-250, */
+/* #section-251, */
+/* #section-252, */
+/* #section-253, */
+/* #section-254, */
+/* #section-255, */
+/* #section-256, */
+/* #section-257, */
+/* #section-258, */
+/* #section-259, */
+/* #section-260, */
+/* #section-261, */
+/* #section-262, */
+/* #section-263, */
+/* #section-264, */
+/* #section-265, */
+/* #section-266, */
+/* #section-267, */
+/* #section-268, */
+/* #section-269, */
+/* #section-270, */
+/* #section-271, */
+/* #section-272, */
+/* #section-273, */
+/* #section-274, */
+/* #section-275, */
+/* #section-276, */
+/* #section-277, */
+/* #section-278, */
+/* #section-279, */
+/* #section-280, */
+/* #section-281, */
+/* #section-282, */
+/* #section-283, */
+/* #section-284, */
+/* #section-285, */
+/* #section-286, */
+/* #section-287, */
+/* #section-288, */
+/* #section-289, */
+/* #section-290, */
+/* #section-291, */
+/* #section-292, */
+/* #section-293, */
+/* #section-294, */
+/* #section-295, */
+/* #section-296, */
+/* #section-297, */
+/* #section-298, */
+/* #section-299, */
+/* #section-300, */
+/* #section-301, */
+/* #section-302, */
+/* #section-303, */
+/* #section-304, */
+/* #section-305, */
+/* #section-306, */
+/* #section-307, */
+/* #section-308, */
+/* #section-309, */
+/* #section-310, */
+/* #section-311, */
+/* #section-312, */
+/* #section-313, */
+/* #section-314, */
+/* #section-315, */
+/* #section-316, */
+/* #section-317, */
+/* #section-318, */
+/* #section-319, */
+/* #section-320, */
+/* #section-321, */
+/* #section-322, */
+/* #section-323, */
+/* #section-324, */
+/* #section-325, */
+/* #section-326, */
+/* #section-327, */
+/* #section-328, */
+/* #section-329, */
+/* #section-330, */
+/* #section-331, */
+/* #section-332, */
+/* #section-333, */
+/* #section-334, */
+/* #section-335, */
+/* #section-336, */
+/* #section-337, */
+/* #section-338, */
+/* #section-339, */
+/* #section-340, */
+/* #section-341, */
+/* #section-342, */
+/* #section-343, */
+/* #section-344, */
+/* #section-345, */
+/* #section-346, */
+/* #section-347, */
+/* #section-348, */
+/* #section-349, */
+/* #section-350, */
+/* #section-351, */
+/* #section-352, */
+/* #section-353, */
+/* #section-354, */
+/* #section-355, */
+/* #section-356, */
+/* #section-357, */
+/* #section-358, */
+/* #section-359, */
+/* #section-360, */
+/* #section-361, */
+/* #section-362, */
+/* #section-363, */
+/* #section-364, */
+/* #section-365, */
+/* #section-366, */
+/* #section-367, */
+/* #section-368, */
+/* #section-369, */
+/* #section-370, */
+/* #section-371, */
+/* #section-372, */
+/* #section-373, */
+/* #section-374, */
+/* #section-375, */
+/* #section-376, */
+/* #section-377, */
+/* #section-378, */
+/* #section-379, */
+/* #section-380, */
+/* #section-381, */
+/* #section-382, */
+/* #section-383, */
+/* #section-384, */
+/* #section-385, */
+/* #section-386, */
+/* #section-387, */
+/* #section-388, */
+/* #section-389, */
+/* #section-390, */
+/* #section-391, */
+/* #section-392, */
+/* #section-393, */
+/* #section-394, */
+/* #section-395, */
+/* #section-396, */
+/* #section-397, */
+/* #section-398, */
+/* #section-399 { */
+	display: none;
 }
