--- a/coptic/mallon/styles/styles.css
+++ b/coptic/mallon/styles/styles.css
@@ -253,11 +253,14 @@ em {
 	font-size: 2em;
 }
 
+.section {
+	overflow-x: scroll;
+}
+
 table {
 	border-collapse: collapse;
 /*	border: 5px solid black; */
 	width: 100%;
-	overflow-x: scroll;
 }
 th, td {
 /*	border: 1px solid #00000022; */
