--- a/coptic/mallon/styles/styles.css
+++ b/coptic/mallon/styles/styles.css
@@ -291,3 +291,11 @@ td.gr:before {
 p.footnote {
 	display: none;
 }
+
+#abreviations_conventionnelles ul {
+	list-style-type: none;
+}
+
+#intro {
+	display: none;
+}
