--- a/maltese/aquilina/styles/styles.css
+++ b/maltese/aquilina/styles/styles.css
@@ -6,6 +6,11 @@ body {
 
 em {
   color: lightgreen;
-  font-family: Afacad;
+  font-family: rk_maltese;
   font-style: normal;
+}
+
+@font-face {
+	font-family: rk_maltese;
+	src: url("./Afacad.ttf");
 }
