--- a/maltese/aquilina/styles/styles.css
+++ b/maltese/aquilina/styles/styles.css
@@ -1,20 +1,27 @@
 body {
-  font-size: 1.5em;
-  color: gray;
-  background: black;
+	font-size: 1.5em;
+	color: gray;
+	background: black;
 }
 
 em {
-  color: lightgreen;
-  font-family: rk_maltese;
-  font-style: normal;
+	color: lightgreen;
+	font-family: rk_maltese;
+	font-style: normal;
 }
 
 em.ipa {
-	color: lightblue;
+	color: violet;
+	font-family: rk_ipa;
+	font-style: normal;
 }
 
 @font-face {
 	font-family: rk_maltese;
 	src: url("./Afacad.ttf");
+}
+
+@font-face {
+	font-family: rk_ipa;
+	src: url("./Voces.ttf");
 }
