--- a/coptic/mallon/styles/styles.css
+++ b/coptic/mallon/styles/styles.css
@@ -27,6 +27,24 @@ body {
 	padding: 0 1em;
 }
 
+#title,
+#preface,
+#intro,
+#abreviations_conventionnelles,
+.rk_section,
+/* div:has(> #chapter_01), */
+div:has(> #chapter_02),
+div:has(> #chapter_03),
+div:has(> #chapter_04),
+div:has(> #chapter_05),
+div:has(> #chapter_06),
+div:has(> #chapter_07),
+div:has(> #chapter_08),
+div:has(> #chapter_09),
+div:has(> #chapter_10) {
+	display: none;
+}
+
 h1,h2,h3,h4,h5,h6 {
 	font-weight: normal;
 }
@@ -132,6 +150,7 @@ sup.footnote {
 
 em {
 	color: lightgreen;
+	text-decoration: underline dotted;
 	font-family: rk_coptic, rk_greek, rk_arabic;
 	font-style: normal;
 }
@@ -150,18 +169,56 @@ em {
 	overflow-x: auto;
 }
 
+.breadcrumb {
+	color: gold;
+}
+
 table {
+	color: white;
 	border-collapse: collapse;
 	width: 100%;
+/* 	border: 1px solid; */
+/* 	background: #ffffff22; */
 }
 
-th, td {
-	background: #ffffff22;
+table em {
+	color: inherit;
+	text-decoration: none;
 }
 
-th:empty,
-td:empty {
-	background: transparent;
+tr:nth-child(even) th,
+tr:nth-child(even) td {
+	background: darkblue;
+	background: #ffffff11;
+}
+
+tr:nth-child(odd) th,
+tr:nth-child(odd) td {
+	background: darkolivegreen;
+	background: #ffffff11;
+}
+
+tr:nth-child(even) th:empty,
+tr:nth-child(even) td:empty,
+tr:nth-child(odd) th:empty,
+tr:nth-child(odd) td:empty {
+	background: none;
+}
+
+th {
+	font-weight: normal;
+}
+
+.align-left {
+	text-align: left;
+}
+
+.align-right {
+	text-align: right;
+}
+
+.align-center {
+	text-align: center;
 }
 
 #vocabulaire_saidique table,
@@ -169,13 +226,13 @@ td:empty {
 #vocabulaire_saidique td,
 #vocabulaire_saidique th:empty,
 #vocabulaire_saidique td:empty {
-	background: none;
+/* 	background: none; */
 }
 td.gr {
-	font-weight: normal;
+/* 	font-weight: normal; */
 }
 td.gr:before {
-	content: "•";
+/* 	content: "•"; */
 }
 
 #alphabet_grid_header_row {
