--- a/coptic/mallon/includes/bibliography and vocab wip.html
+++ b/coptic/mallon/includes/bibliography and vocab wip.html
@@ -117,14 +117,14 @@
 				<li><i>Baillet</i>, La particule copte <em>ϫⲓⲛ</em>, <em>ϭⲓⲛ</em>. (RE, II, 1882, p. 349–355). — Origine égyptienne de cette particule. Critique de Revillout, p. 356.</li>
 				<li><i>U. Benigni</i>, La lingua copta. (Bessarione, V, 1901, p. 256–287). — Abrégé de la grammaire.</li>
 				<li><i>U. Benigni</i>, Paradigmi copti. Introduzione alla grammatica copta. (Bessarione, III, 1898, p. 89–121). — Paradigmes coptes en boḥairique et en ṣaꜥîdique.</li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li><i>Bonjour</i>, In monumenta coptica seu Aegyptica bibliothecae Vaticanaw brevis exercitatio. Romae, 1699.</li>
+				<li><i>Busch</i>, Specimen de copticae linguae propositionibus ac particulis. Berlin, 1859.</li>
+				<li><i>W. E. Crum</i>, Westcar IX, 2, im Koptischen. (AZ. 36, 1898, p. 146).</li>
+				<li><i>W. E. Crum</i>, Ein verlorenes Tempuspraefix im Koptischen. (AZ, 36, 1898, p. 139).</li>
+				<li><i>W. E. Crum</i>, Notes on: I. The name Pachomius. II. «Above» and «Below» in coptic. III. Egyptian «Orantes». (PSBA, XXI,1899, p. 247–252). — Remarques de philologie.</li>
+				<li><i>Didymus Taurinensis</i> (Thomas Valperga «Calusius», abbé de Caluso), Litteraturae copticae rudimentum. Parme, 1783, 8, 119 pp. — Dissertation ingénieuse mais peu scientifique.</li>
+				<li><i>J. Dineley Prince</i>, The modern pronunciation of coptic in the mass. (Jour, of the american Oriental Society, Vol. XXIII, 1902, p. 289–506).</li>
+				<li>* <i>A. Erman</i>, Die tonlosen Formen in der aegyptischen Sprache. (AZ. 1883, p. 37–40).</li>
 				<li></li>
 				<li></li>
 				<li></li>
